--- a/foundry.toml
+++ b/foundry.toml
@@ -10,7 +10,7 @@ solc_version = '0.8.13'
 auto_detect_solc = false
 # Increase optimizer_runs
 optimizer = true
-optimizer_runs = 1_000_000
+optimizer_runs = 666
 # Fuzz more than the default 256
 fuzz_runs = 1_000
 # Configure remappings
