--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "typechain": "npx hardhat typechain",
         "export": "npx hardhat export --export-all deployments/contracts.json",
         "setup": "make clean && make build",
-        "sync": "make update",
+        "sync": "make install",
+        "update": "make update",
         "test": "make test",
         "snapshot": "make snapshot",
         "lint": "make lint"
