--- a/foundry.toml
+++ b/foundry.toml
@@ -21,6 +21,7 @@ remappings = [
   "@clones=lib/clones-with-immutable-args/src/",
   "@ensdomains/buffer=lib/buffer/",
   "@ensdomains/ens-contracts=lib/ens-contracts/",
+  "witnet-solidity-bridge/contracts=lib/witnet-solidity-bridge/contracts",
   "@openzeppelin=lib/openzeppelin-contracts/"
 ]
 test = 'test'
