--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
         "prettier-plugin-solidity": "^1.0.0-beta.13",
         "ts-node": "^10.7.0",
         "typechain": "^8.0.0",
-        "typescript": "^4.6.3"
+        "typescript": "^4.6.3",
+        "witnet-solidity-bridge": "^0.5.4"
     },
     "scripts": {
-        "prepare":"npm run typechain && npm run export",
+        "prepare": "npm run typechain && npm run export",
         "typechain": "npx hardhat typechain",
         "deploy": "npx hardhat deploy",
         "export": "npx hardhat export --export-all deployments/contracts.json",
