--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@
 # See more config options at: https://github.com/gakonst/foundry/tree/master/config
 
 # The Default Profile
-[default]
+[profile.default]
 # Sets the concrete solc version to use
 # This overrides the `auto_detect_solc` value
 solc_version = '0.8.13'
@@ -20,5 +20,5 @@ remappings = [
 ]
 test = 'test'
 
-[ci]
+[profile.ci]
 fuzz_runs = 256
